선후공 만들어야하는데 이거 어떻게 해야하지 visible 속성으로 어떻게 컨트롤하지

--- a/app/src/main/res/layout/activity_battle.xml
+++ b/app/src/main/res/layout/activity_battle.xml
@@ -18,7 +18,43 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/enemy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:contentDescription="적 캐릭터"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/numpad" />
+
+        <ImageView
+            android:id="@+id/player"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="20dp"
+            android:contentDescription="플레이어 캐릭터"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/playerfirst"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
+            android:contentDescription="선공"
+            android:text="선공"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/btnRSP_zone"
@@ -35,6 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="가위"
             app:srcCompat="@drawable/scissors100px" />
 
         <ImageButton
@@ -42,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="바위"
             app:srcCompat="@drawable/rock100px" />
 
         <ImageButton
@@ -50,6 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="0dp"
             android:layout_weight="1"
+            android:contentDescription="보"
             app:layout_constraintBottom_toBottomOf="parent"
             app:srcCompat="@drawable/paper100px" />
     </LinearLayout>
