--- a/app/src/main/res/layout/activity_battle.xml
+++ b/app/src/main/res/layout/activity_battle.xml
@@ -47,28 +47,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="선공"
-            android:text="선공"
+            android:text=""
             android:textAlignment="center"
             android:textSize="50sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/enemyfirst"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="후공"
-            android:text="후공"
-            android:textAlignment="center"
-            android:textSize="50sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.499" />
+            tools:visibility="invisible" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
