--- a/app/src/main/res/layout/activity_battle.xml
+++ b/app/src/main/res/layout/activity_battle.xml
@@ -43,7 +43,7 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/playerfirst"
+            android:id="@+id/whofirst"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="선공"
@@ -55,6 +55,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:visibility="invisible" />
+
+        <ImageView
+            android:id="@+id/playerchoose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="14dp"
+            app:layout_constraintBottom_toTopOf="@+id/player"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/paper100px" />
+
+        <ImageView
+            android:id="@+id/enemychoose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="@+id/enemy"
+            app:layout_constraintTop_toBottomOf="@+id/enemy"
+            app:srcCompat="@drawable/paper100px" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
