--- a/app/src/main/res/layout/activity_battle.xml
+++ b/app/src/main/res/layout/activity_battle.xml
@@ -22,27 +22,25 @@
 
         <ImageView
             android:id="@+id/enemy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:contentDescription="적 캐릭터"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/numpad"
-            tools:visibility="visible" />
+            app:srcCompat="@drawable/numpad" />
 
         <ImageView
             android:id="@+id/player"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="20dp"
             android:contentDescription="플레이어 캐릭터"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:srcCompat="@drawable/numpad"
-            tools:visibility="visible" />
+            app:srcCompat="@drawable/numpad" />
 
         <TextView
             android:id="@+id/whofirst"
@@ -62,18 +60,20 @@
             android:id="@+id/playerchoose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/player"
-            app:layout_constraintStart_toStartOf="@+id/player"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/paper100px" />
 
         <ImageView
             android:id="@+id/enemychoose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/enemy"
-            app:layout_constraintTop_toBottomOf="@+id/enemy"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/paper100px" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
