--- a/app/src/main/res/layout/activity_battle.xml
+++ b/app/src/main/res/layout/activity_battle.xml
@@ -80,11 +80,12 @@
 
     <LinearLayout
         android:id="@+id/btnRSP_zone"
-        android:layout_width="371dp"
+        android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
         android:orientation="horizontal"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -113,5 +114,35 @@
             android:contentDescription="보"
             app:layout_constraintBottom_toBottomOf="parent"
             app:srcCompat="@drawable/paper100px" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/dicezone"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/diceImage"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginEnd="40dp"
+            android:src="@drawable/dice1" />
+
+        <ImageButton
+            android:id="@+id/btnRollDice"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="40dp"
+            android:contentDescription="주사위 굴리기"
+            app:srcCompat="@drawable/numpad" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
