주사위 굴리기 기능 구현한 부분 UI 조정완료, 선후공에 따른 순서랑 주사위 굴리는 gif 적용 해야함

--- a/app/src/main/res/layout/activity_battle.xml
+++ b/app/src/main/res/layout/activity_battle.xml
@@ -58,23 +58,23 @@
 
         <ImageView
             android:id="@+id/playerchoose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/paper100px" />
+            app:srcCompat="@null" />
 
         <ImageView
             android:id="@+id/enemychoose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/paper100px" />
+            app:srcCompat="@null" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
