--- a/app/src/main/res/layout/activity_snake_game.xml
+++ b/app/src/main/res/layout/activity_snake_game.xml
@@ -87,10 +87,11 @@
         </LinearLayout>
 
         <Button
-            android:layout_width="77dp"
-            android:layout_height="120dp"
+            android:id="@+id/btn_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:text="액션 버튼" />
+            android:text="가속" />
 
     </LinearLayout>
 
