메인화면 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,4 +79,12 @@
         tools:layout_editor_absoluteX="144dp"
         tools:layout_editor_absoluteY="551dp" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="351dp"
+        android:layout_height="367dp"
+        app:srcCompat="@drawable/snake"
+        tools:layout_editor_absoluteX="-84dp"
+        tools:layout_editor_absoluteY="448dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
