--- a/app/src/main/res/layout/activity_battle.xml
+++ b/app/src/main/res/layout/activity_battle.xml
@@ -67,7 +67,7 @@
             android:contentDescription="플레이어 캐릭터"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/dice2" />
+            app:srcCompat="@drawable/playerchar" />
 
         <ProgressBar
             android:id="@+id/playerHpBar"
@@ -228,7 +228,7 @@
             android:layout_height="120dp"
             android:background="#FFFFFF"
             android:contentDescription="플레이어 스테이터스"
-            app:srcCompat="@drawable/arrow_down" />
+            app:srcCompat="@drawable/status" />
 
         <ImageButton
             android:id="@+id/btnRollDice"
@@ -237,7 +237,7 @@
             android:layout_marginStart="40dp"
             android:background="#FFFFFF"
             android:contentDescription="주사위 굴리기"
-            app:srcCompat="@drawable/arrow_up" />
+            app:srcCompat="@drawable/rolldicebtn" />
 
     </LinearLayout>
 
