--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:layout_width="351dp"
         android:layout_height="367dp"
         app:srcCompat="@drawable/snake"
+        android:contentDescription="@string/background"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="-84dp"
         tools:layout_editor_absoluteY="448dp" />
